[package]
name = "bitcoin-harness"
version = "0.2.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"
description = "A simple lib to start a bitcoind container, generate blocks and fund addresses"
license = "MIT"

[dependencies]
# Hopefully goes away: https://github.com/thomaseizinger/rust-jsonrpc-client/issues/6
async-trait = "0.1"
base64 = "0.12.3"
bitcoin = { version = "0.26", features = ["use-serde"] }
bitcoincore-rpc-json = "0.13"
futures = "0.3.5"
hex = "0.4.2"
jsonrpc_client = { version = "0.5", features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
testcontainers = "0.11"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
test-docker = []
