[package]
name = "bitcoin-harness"
version = "0.2.1"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"
description = "A simple lib to start a bitcoind container, generate blocks and fund addresses"
license = "MIT"

[dependencies]
base64 = "0.12.3"
bitcoin = { version = "0.29", features = ["serde"] }
bitcoincore-rpc-json = "0.16"
futures = "0.3.5"
hex = "0.4.2"
hmac = "0.12.1"
jsonrpc_client = { version = "0.7", features = ["reqwest"] }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
testcontainers = "0.15"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
bitcoincore-rpc = "0.18.0"
pretty_env_logger = "0.5.0"
spectral = "0.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
test-docker = []
